# flight-price-predictor

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_placeholder.py
