[project]
name = "flight-price-predictor"
version = "0.1.0"
description = "Real-time flight price forecasting system"
authors = [
    {name = "Ashvin Maheshwar",email = "adventoros@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
